make sure json doesn't overflow

--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@
   margin-right: auto;
 }
 
-
 .message {
   display: block;
   margin-top: .25em;
@@ -24,3 +23,24 @@
   width: 2.5em;
   height: 2.5em;
 }
+
+pre {
+  width: 100%;
+  display: block;
+}
+
+code {
+  display: inline-block;
+  vertical-align: bottom;
+}
+
+code, pre {
+overflow: auto;
+word-break: break-all;
+word-wrap: break-word;
+white-space: pre;
+white-space: -moz-pre-wrap;
+white-space: pre-wrap;
+white-space: pre\9;
+}
+
